--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -21,8 +21,12 @@
    "outputs": [],
    "source": [
     "# helpers\n",
-    "remove_nan = lambda df, i: list(map(lambda x: int(float(x)), df.iloc[i][df.iloc[i].notnull()].tolist())) # the pandas data frame is a parallogram with nan values as padding \n",
-    "out_string = lambda p_val, alpha, thresh: f\"Significant: {'yes' if p_val < alpha else 'no'}\\np-value:     {round(p_val, 5)}\\nThreshhold:  {thresh}\\n\""
+    "df_to_list  = lambda df, i: df.iloc[i][df.iloc[i].notnull()].tolist()                   # convert pandas row with nan to list without\n",
+    "remove_nan  = lambda df, i: list(map(lambda x: int(float(x)), df_to_list(df, i)))       # the pandas data frame is a parallogram with nan values as padding \n",
+    "significant = lambda p_val, alpha: f\"Significant: {'yes' if p_val < alpha else 'no'}\\n\" # finding significant?\n",
+    "round_p_val = lambda p_val: f\"p-value:     {round(p_val, 5)}\\n\"                         # round p value\n",
+    "out_string  = lambda p, a, t: f\"{significant(p, a)}{round_p_val(p)}Threshold:  {t}\\n\"   # format outstring\n",
+    "bootstrap   = lambda X: np.random.choice(len(X), len(X), replace=True)                  # sample with replacement"
    ]
   },
   {
@@ -47,28 +51,52 @@
    "source": [
     "M = np.array([remove_nan(df, i) for i in range(df.shape[0])]) # convert pandas data frame to numpy array\n",
     "T = (M[M[:, 0] == 1] - 2)[:, 1:]                              # treatment dataframe with our's and author's upvote REMOVED\n",
-    "C = M[M[:, 0] == 0][:, 1:] - 1                                # control data frame with author's upvote removed\n",
-    "# np.random.seed(42)                                            # ensure same 500 samples are selected on every run\n",
-    "# C = C[np.random.choice(C.shape[0], T.shape[0], replace=0), :] # balance C and T by selecting 500 random samples from C"
+    "C = M[M[:, 0] == 0][:, 1:] - 1                                # control data frame with author's upvote removed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88bf663c-688c-452d-bba6-11eb96416d5f",
+   "id": "d2864d0a-3db6-478b-9f73-ad5e5a7e99e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshs = [10 ** i for i in range(4)]  # our hypothesis looks at the four different orders of magnitude\n",
-    "# days    = 6                          # test on multiple days\n",
-    "n       = T.shape[0]                   # number of samples\n",
-    "alpha   = 0.05 / (len(threshs)) # significance level with bernferoni correction"
+    "M = np.array([remove_nan(df, i) for i in range(df.shape[0])]) # convert pandas data frame to numpy array\n",
+    "T = (M[M[:, 0] == 1] - 2)[:, 1:]                              # treatment dataframe with our's and author's upvote REMOVED\n",
+    "C = M[M[:, 0] == 0][:, 1:] - 1                                # control data frame with author's upvote removed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee713ba-02d0-4466-a468-9548f605a130",
+   "id": "137c8423-7926-4fca-b0dc-f985641abc75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)                                 # set seed for reproducibility\n",
+    "T_means, C_means = [], []                          # arrays for storing bootstrapped means\n",
+    "for i in range(10000):                             # bootstrap means\n",
+    "    T_means.append(np.mean(T[bootstrap(T)]))       # bootstrap treatment\n",
+    "    C_means.append(np.mean(C[bootstrap(C)]))       # bootstrap control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3fe944f-0dec-463a-8a6d-296857db0569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshs = [10 ** i for i in range(4)] # our hypothesis looks at the four different orders of magnitude\n",
+    "p_vals  = []                          # store p-values\n",
+    "n       = T.shape[0]                  # number of samples\n",
+    "alpha   = 0.05 / (len(threshs))       # significance level with bernferoni correction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed15f58-d248-4da6-9ab8-c91035ea74cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,14 +104,26 @@
     "for thresh in threshs:                        # for the four upvote orderes of magnitude in focus\n",
     "    r = np.sum(T[:,-1] > thresh)              # how big a fraction of samples are above the treshhold in Treatment\n",
     "    p = np.sum(C[:,-1] > thresh) / C.shape[0] # what's the probability of being above the threshhold given no treatment?\n",
-    "    p_val = 1 - binom.cdf(r, n, p)            # calcaulte p-value (whether we are above thresh or not is a binary/binomial question)\n",
-    "    print(out_string(p_val, alpha, thresh))   # print nice text describing result"
+    "    p_vals.append(1 - binom.cdf(r, n, p))     # calcaulte p-value (whether we are above thresh or not is a binary/binomial question)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137c8423-7926-4fca-b0dc-f985641abc75",
+   "id": "2bd057d6-063b-4eaa-a966-ca988c7179bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boot = np.sum(np.array(T_means) < np.array(C_means)) # count often bootstrap treament mean beats control\n",
+    "print('T below C:  ', boot / 10_000, end='\\n\\n')     # print that\n",
+    "for p_val, thresh in zip(p_vals, threshs):           # loop through threshs\n",
+    "    print(out_string(p_val, alpha, thresh))          # print nice text describing result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a54249-eca5-4687-9bc0-b274290fd74e",
    "metadata": {},
    "outputs": [],
    "source": []
