--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
     "# imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import binom"
+    "from scipy.stats import binom, ttest_rel"
    ]
   },
   {
@@ -32,12 +32,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c74d3733-b534-4a65-bf92-7814ab047da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "days = 7\n",
+    "file = 'data_more.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e8326600-6d57-45af-95c5-19603ff92104",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data.csv')        # read constructed data.csv file\n",
-    "df = df[df.columns[1:16]][:150*7]   # limit to treatment and date columns\n",
+    "df = pd.read_csv(file)              # read constructed data.csv file\n",
+    "df = df[df.columns[1:days + 7 + 2]][:150*days]   # limit to treatment and date columns\n",
     "df = df[(df != 'forbidden').all(1)] # remove treatment samples that broke due to lacking upvote rights\n",
     "df = df[df['treatment'] != -1]      # remove treatment samples that were deleted before we could upvote"
    ]
@@ -51,21 +62,7 @@
    "source": [
     "M = np.array([remove_nan(df, i) for i in range(df.shape[0])]) # convert pandas data frame to numpy array\n",
     "T = (M[M[:, 0] == 1] - 2)[:, 1:]                              # treatment dataframe with our's and author's upvote REMOVED\n",
-    "C = M[M[:, 0] == 0][:, 1:] - 1                                # control data frame with author's upvote removed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "137c8423-7926-4fca-b0dc-f985641abc75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(42)                                 # set seed for reproducibility\n",
-    "T_means, C_means = [], []                          # arrays for storing bootstrapped means\n",
-    "for i in range(10000):                             # bootstrap means\n",
-    "    T_means.append(np.mean(T[bootstrap(T)]))       # bootstrap treatment\n",
-    "    C_means.append(np.mean(C[bootstrap(C)]))       # bootstrap control"
+    "C = (M[M[:, 0] == 0] - 1)[:, 1:]                              # control data frame with author's upvote removed"
    ]
   },
   {
@@ -98,6 +95,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3da74f25-39fc-4a26-a739-6ccef1409838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "C_idx = np.random.choice(len(C), min([len(C), len(T)]), replace=False) \n",
+    "T_idx = np.random.choice(len(T), min([len(C), len(T)]), replace=False) \n",
+    "ttest_ind(T[T_idx, -1], C[C_idx, -1], alternative='greater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2bd057d6-063b-4eaa-a966-ca988c7179bc",
    "metadata": {},
    "outputs": [],
@@ -107,6 +117,14 @@
     "for p_val, thresh in zip(p_vals, threshs):           # loop through threshs\n",
     "    print(out_string(p_val, alpha, thresh))          # print nice text describing result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ed7a19-b88c-49c2-ae96-bf663703b1f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
